# chatglm-lesson

./: README.md  api.py  characterglm_api_demo_streamlit.py  characterglm_example.py  pyproject.toml  roleplay_example.py
corpus/: 孙悟空.info  孙悟空_to_菩提祖师.json  孙悟空_to_菩提祖师.md  菩提祖师.info  西游记第二回片段.txt
